--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1554,6 +1554,9 @@ pre {
       border: 0; } }
 
 @media (max-width: 767.98px) {
+    .owl-carousel {
+        display: none;
+    }
   .table-responsive-md {
     display: block;
     width: 100%;
@@ -8482,6 +8485,9 @@ h1, h2, h3, h4, h5,
           width: 50%;
           position: relative; }
           @media (min-width: 768px) {
+              .owl-carousel {
+                  touch-action: none;
+              }
             .owl-carousel.home-slider .slider-item .slider-text .one-forth {
               position: absolute;
               top: 0;
